Added Guardian API key

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">News Feed</string>
+    <string name="guardian_key">613d1d2f-dd56-4d5e-8404-519ba4b18e24</string>
 </resources>
