--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">News Feed</string>
     <string name="guardian_key">613d1d2f-dd56-4d5e-8404-519ba4b18e24</string>
     <string name="http_string">http</string>
+    <string name="no_internet_connection">No internet connection.</string>
+    <string name="no_articles">No articles found.</string>
+
 </resources>
